--- a/build.gradle
+++ b/build.gradle
@@ -9,16 +9,21 @@ repositories {
     mavenCentral()
 }
 
-jar {
-    manifest {
-        attributes("Main-Class": "banking.Main")
-    }
-}
-
 dependencies {
     implementation 'org.xerial:sqlite-jdbc:3.36.0.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
+}
+
+
+jar {
+    manifest {
+        attributes "Main-Class": "banking.Main"
+    }
+
+    from {
+        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 test {
